active learning based sampling

--- a/conf/run.ini
+++ b/conf/run.ini
@@ -4,11 +4,13 @@ MLFLOW_EXP_PREFIX = PLDepth
 
 [LOGGING]
 LOG_LEVEL = DEBUG
-TENSORBOARD_LOG_DIR = tbd
+TENSORBOARD_LOG_DIR = /home/praneeth/projects/thesis/git/PLDepth/results/TB
 
 [DATA]
-CACHE_PATH_PREFIX = tbd
-HR_WSI_ROOT_PATH = tbd
+CACHE_PATH_PREFIX = /home/praneeth/projects/thesis/git/PLDepth/results
+HR_WSI_ROOT_PATH = /home/praneeth/projects/thesis/git/HR-WSI
+HR_WSI_TEST_PATH = /home/praneeth/projects/thesis/git/mytest/data
+HR_WSI_PROCESSED_PATH = /home/praneeth/projects/thesis/git/mytest/data/processed
 IBIMS_ROOT_PATH = tbd
 SINTEL_ROOT_PATH = tbd
 DIODE_ROOT_PATH = tbd
