--- a/conf/run.ini
+++ b/conf/run.ini
@@ -15,3 +15,4 @@ IBIMS_ROOT_PATH = tbd
 SINTEL_ROOT_PATH = tbd
 DIODE_ROOT_PATH = tbd
 TUM_ROOT_PATH = tbd
+HIST_PATH = /home/praneeth/projects/thesis/git/PLDepth/results/
