--- a/conf/run.ini
+++ b/conf/run.ini
@@ -10,9 +10,12 @@ TENSORBOARD_LOG_DIR = /home/praneeth/projects/thesis/git/PLDepth/results/TB
 CACHE_PATH_PREFIX = /home/praneeth/projects/thesis/git/PLDepth/results
 HR_WSI_ROOT_PATH = /home/praneeth/projects/thesis/git/HR-WSI
 HR_WSI_TEST_PATH = /home/praneeth/projects/thesis/git/mytest/data
+HR_WSI_DEBUG_PATH = /home/praneeth/projects/thesis/git/mytest/data
 HR_WSI_PROCESSED_PATH = /home/praneeth/projects/thesis/git/mytest/data/processed
 IBIMS_ROOT_PATH = tbd
 SINTEL_ROOT_PATH = tbd
 DIODE_ROOT_PATH = tbd
 TUM_ROOT_PATH = tbd
 HIST_PATH = /home/praneeth/projects/thesis/git/PLDepth/results/
+WANDB_PATH =
+
