--- a/conf/run.ini
+++ b/conf/run.ini
@@ -17,5 +17,5 @@ SINTEL_ROOT_PATH = tbd
 DIODE_ROOT_PATH = tbd
 TUM_ROOT_PATH = tbd
 HIST_PATH = /home/praneeth/projects/thesis/git/PLDepth/results/
-WANDB_PATH =
+WANDB_PATH = ''
 
