--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
 tensorflow>=2.2.0
-numpy
-matplotlib
-keras
-mlflow
+numpy~=1.19.5
+matplotlib~=3.4.2
+keras~=2.4.3
+mlflow~=1.20.2
 scikit-learn
 Flask-SQLAlchemy
 mysql-connector-python
 mysqlclient
-h5py
-tqdm
-scikit-image
+h5py~=2.10.0
+tqdm~=4.62.2
+scikit-image~=0.18.3
 protobuf>=3.8.0
-click
+click~=8.0.1
 torchfile
-scipy
+scipy~=1.4.1
 pandas
-opencv-python
+opencv-python~=4.5.3.56
 tensorflow-datasets
 tensorflow_ranking==0.3.1
+configparser~=5.0.2
+wandb~=0.12.2
+hyperopt~=0.2.5
