restart sweep script

--- a/conf/run.ini
+++ b/conf/run.ini
@@ -18,4 +18,4 @@ DIODE_ROOT_PATH = tbd
 TUM_ROOT_PATH = tbd
 HIST_PATH = /home/praneeth/projects/thesis/git/PLDepth/results/
 WANDB_PATH = ''
-
+HR_WSI_1K_PATH = /home/praneeth/projects/thesis/git/mytest/data
